--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ table {
 /* END RESET */
 
 body {
+  height: 100%;
   font-family: "Barlow", sans-serif;
   font-size: 16px;
   background: #0090c6;
@@ -184,6 +185,16 @@ header {
   padding: 1rem;
 }
 
+footer {
+  display: grid;
+  justify-items: center;
+  text-align: center;
+  align-items: center;
+  height: 50px;
+}
+
+
+
 input {
   background: none;
   border: none;
@@ -197,12 +208,12 @@ input {
 .page {
   background: #fafafa;
   box-shadow: 0 0 2rem rgba(0, 0, 0, 0.2);
-  min-height: 80vh;
+  min-height: 90vh;
   display: grid;
   align-content: center;
   justify-content: center;
-  margin: 5vh;
   padding: 5vh;
+  margin-bottom: -50px;
 }
 
 .content {
@@ -215,11 +226,10 @@ input {
 }
 
 @media (max-width: 800px) {
-  .page {
-    min-height: 80vh;
-  }
+  
   header {
     grid-template-columns: 1fr;
+    padding-top: 0;
   }
   .content {
     grid-template-columns: 1fr;
@@ -231,6 +241,9 @@ input {
   display: grid;
   align-content: center;
   margin: 1rem 0;
+}
+.left {
+  margin-bottom: 0;
 }
 
 .lead {
